# PeerOuette

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  main.c  main.cpp
CMakeModules/: FindDirectX.cmake  FindFFmpeg.cmake  FindProtobuf.cmake  FindSDL2.cmake  LibFindMacros.cmake
protobuf/: CMakeLists.txt  route_guide.proto  route_guide_client.cc
protos/: route_guide.proto
scripts/: build.py  install_deps_linux.sh  install_deps_macos.sh
src/I420effect/: I420Effect_PS.h  I420Effect_PS.hlsl  I420Effect_VS.h  I420Effect_VS.hlsl  I420effect.cpp  I420effect.h
src/capture/: capture.cpp  capture.h
src/codec/: codec.cpp  codec.h
src/dxcapture/: capture.cpp  capture.h
src/extractors/: extractors.cpp  extractors.h
src/inputs/: inputs.cpp  inputs.h
src/network/: network.cpp  network.h  network_win.cpp  network_win.h  network_win_raw_sockets.cpp
src/network/grpc/: route_guide.grpc.pb.cc  route_guide.grpc.pb.h  route_guide.pb.cc  route_guide.pb.h
src/output/: output.cpp  output.h
src/queue/: queue.c  queue.cpp  queue.h
src/streaming/: streaming.cpp  streaming.h
src/texture_converter/: TextureConverter.cpp  TextureConverter.h
src/texture_converter/shaders/: Pixel.h  Pixel.hlsl  RGBtoYUV.h  RGBtoYUV.hlsl  Vertex.h  Vertex.hlsl
video/: ffmpeg.cpp  ffmpeg.h
